project/ingress/appingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: champscloset.dpdns.org
      http:
        paths: 
         - path: /
           pathType: Prefix
           backend:
             service:
               name: app-svc
               port: 
                number: 8080
